--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -253,6 +253,9 @@ head
        h6 small {
       #{small}
       }
+      .activemenuitem {
+        background-color:#333;
+      }
   body
     script.
       if(screen.width < 414){
@@ -265,6 +268,7 @@ head
            span(class='input-group-btn')
              button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
                span(class='glyphicon glyphicon-search') 
+      a(class='activemenuitem') Мои списки
       a(href="/people") Списки друзей
       a(href="/settings") Настройки
       a(href='/about') О проекте
