--- a/views/newemptyindexreg.jade
+++ b/views/newemptyindexreg.jade
@@ -273,6 +273,9 @@ head
       a {
         color:white !important;
       }
+      .activemenuitem {
+        background-color:#333;
+      }
   body
     script.
       if(screen.width < 414){
@@ -285,6 +288,7 @@ head
            span(class='input-group-btn')
              button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
                span(class='glyphicon glyphicon-search') 
+      a(class='activemenuitem') Мои списки
       a(href='/people') Списки друзей
       a(href="/settings") Настройки
       a(href='/about') О проекте
