--- a/views/people.jade
+++ b/views/people.jade
@@ -29,6 +29,9 @@ head
       background-color:#333;
       font-family:roboto-thin;
       }
+      .container{
+        transition:filter 0.5s;
+      }
       .navbar-nav {
        float: right;
       }
