--- a/views/people.jade
+++ b/views/people.jade
@@ -31,6 +31,7 @@ head
       }
       .container{
         transition:filter 1s;
+        -webkit-transition:filter 1s;
       }
       .navbar-nav {
        float: right;
