--- a/views/people.jade
+++ b/views/people.jade
@@ -32,6 +32,7 @@ head
       .container{
         transition:filter 1s;
         -webkit-transition:filter 1s;
+        -webkit-filter:brightness(1);
       }
       .navbar-nav {
        float: right;
