--- a/views/people.jade
+++ b/views/people.jade
@@ -30,8 +30,8 @@ head
       font-family:roboto-thin;
       }
       .container{
-        transition:filter 1s;
-        -webkit-transition:filter 1s;
+        transition:filter 1s linear;
+        -webkit-transition:filter 1s linear;
         -webkit-filter:brightness(1);
       }
       .navbar-nav {
