--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -170,7 +170,10 @@ head
         color:white !important;
       }
       .container {
+        filter:brightness(1);
+        -webkit-filter:brightness(1);
         transition: 0.5s -webkit-filter linear;
+        -webkit-transition: 0.5s -webkit-filter linear;
       }
       .navbar-right {
         float: none !important; 
