--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -247,25 +247,25 @@ head
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
-    .container( id='maincont' style='-webkit-filter:brightness(1);background-color:#333;overflow:auto;height:100%;padding-right:0px;padding-bottom:74px;')
+    .container( id='maincont' style='-webkit-filter:brightness(1);background-color:#002A3C;overflow:auto;height:100%;padding-right:0px;padding-bottom:74px;')
       .row
         .col-xs-12
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:7vh;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
       .row(style='color:white;')
         .col-xs-12
-          h1(style='margin-top:7vh;margin-bottom:15vh;text-align:center;') Tell me what you read, and I will tell you who you are.
+          h2(style='margin-top:7vh;margin-bottom:15vh;text-align:center;') Tell me what you read, and I will tell you who you are.
             small(style='margin-left:20px;') François Mauriac
       .row(style='color:#ccc;text-align:center;')
         .col-xs-12
           h4 
             span(style='color:#ff00ab;') List
             |  your books and movies
-      .row
+      .row(style='color:#ccc;text-align:center;')
         .col-xs-12
           h4 
             span(style='color:#ff9900;') Share
             |  with friends and collegues
-      .row
+      .row(style='color:#ccc;text-align:center;')
         .col-xs-12
           h4 Or keep it 
             span(style='color:#00c9ff;') private
