--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -253,8 +253,8 @@ head
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:7vh;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
       .row(style='color:white;')
         .col-xs-12(style='text-align:center;')
-          h2(style='margin-top:7vh;margin-bottom:15vh;') Tell me what you read, and I will tell you who you are.
-          h3(style='margin-left:20px;color:#ddd;') François Mauriac
+          h2(style='margin-top:7vh;') Tell me what you read, and I will tell you who you are.
+          h3(style='margin-left:20px;color:gray;margin-bottom:15vh;') François Mauriac
       .row(style='color:#ccc;text-align:center;')
         .col-xs-12
           h4 
