--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -248,13 +248,13 @@ head
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
     .container( id='maincont' style='-webkit-filter:brightness(1);background-color:#002A3C;overflow:auto;height:100%;padding-bottom:74px;')
-      .row
+      .row(style='background-color:#4CBBFF;')
         .col-xs-12
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:7vh;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
-      .row(style='color:white;')
+      .row(style='color:white;background-color:#4CBBFF;')
         .col-xs-12(style='text-align:center;')
           h2(style='margin-top:7vh;') Tell me what you read, and I will tell you who you are.
-          h3(style='margin-left:20px;color:gray;margin-bottom:15vh;') François Mauriac
+          h3(style='color:gray;margin-bottom:15vh;') François Mauriac
       .row(style='color:#ccc;text-align:center;')
         .col-xs-12
           h4 
@@ -269,7 +269,7 @@ head
         .col-xs-12
           h4 Or keep it 
             span(style='color:#00c9ff;') private
-      .row(style='color:gray;')
+      .row(style='color:gray;background-color:#1d1d1d;')
         .col-xs-12
           a(href='http://topandviews.com' id='stlink')
             h5(style='text-align:center;margin-top:30vh;') Top&Views Design
