--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -234,6 +234,12 @@ head
         -webkit-filter:brightness(1);
        transition: 0.5s -webkit-filter linear;
       }
+      #first{
+        background: -webkit-linear-gradient(#002A3C,#4CBBFF); /* For Safari 5.1 to 6.0 */
+       background: -o-linear-gradient(#002A3C,#4CBBFF); /* For Opera 11.1 to 12.0 */
+       background: -moz-linear-gradient(#002A3C,#4CBBFF); /* For Firefox 3.6 to 15 */
+       background: linear-gradient(#002A3C,#4CBBFF); /* Standard syntax */
+      }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
@@ -251,7 +257,7 @@ head
       .row(style='background-color:#4CBBFF;')
         .col-xs-12
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:7vh;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
-      .row(style='color:white;background-color:#4CBBFF;')
+      .row(id='first' style='color:white;')
         .col-xs-12(style='text-align:center;')
           h2(style='margin-top:7vh;') Tell me what you read, and I will tell you who you are.
           h3(style='color:gray;margin-bottom:15vh;') François Mauriac
