--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -235,10 +235,10 @@ head
        transition: 0.5s -webkit-filter linear;
       }
       #first{
-        background: -webkit-linear-gradient(#002A3C,#4CBBFF); /* For Safari 5.1 to 6.0 */
-       background: -o-linear-gradient(#002A3C,#4CBBFF); /* For Opera 11.1 to 12.0 */
-       background: -moz-linear-gradient(#002A3C,#4CBBFF); /* For Firefox 3.6 to 15 */
-       background: linear-gradient(#002A3C,#4CBBFF); /* Standard syntax */
+        background: -webkit-linear-gradient(#4CBBFF,#002A3C); /* For Safari 5.1 to 6.0 */
+       background: -o-linear-gradient(#4CBBFF,#002A3C); /* For Opera 11.1 to 12.0 */
+       background: -moz-linear-gradient(#4CBBFF,#002A3C); /* For Firefox 3.6 to 15 */
+       background: linear-gradient(#4CBBFF,#002A3C); /* Standard syntax */
       }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
