--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -252,7 +252,7 @@ head
       .row(style='background-color:#4CBBFF;')
         .col-xs-12
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:7vh;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
-      .row(id='first' style='color:white;')
+      .row( style='color:white;')
         .col-xs-12(style='text-align:center;')
           h2(style='margin-top:7vh;') Tell me what you read, and I will tell you who you are.
           h3(style='color:gray;margin-bottom:15vh;') François Mauriac
