--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -249,7 +249,7 @@ head
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
     .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;height:100%;padding-bottom:74px;')
-      .row(style='background-color:#4CBBFF;')
+      .row
         .col-xs-12
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:7vh;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
       .row( style='color:white;')
