--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -26,7 +26,7 @@ head
       }
       body {
         font-family:roboto-thin;
-        background-color::#002A3C;
+        background-color:#002A3C;
       }
       h1 {
         font-family:roboto-thin;
