--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -252,25 +252,25 @@ head
       .row(style='background-color:#2F83B0;')
         .col-xs-12
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:7vh;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
-      .row( style='color:white;background-color:#DB8355;')
+      .row( style='color:white;background-color:#2F83B0;')
         .col-xs-12(style='text-align:center;')
           h2(style='margin-top:7vh;') Tell me what you read, and I will tell you who you are.
           h3(style='color:gray;margin-bottom:15vh;') François Mauriac
-      .row(style='color:#ccc;text-align:center;background-color:#E4D363;')
+      .row(style='color:#ccc;text-align:center;background-color:#2F83B0;')
         .col-xs-12
           h4 
             span(style='color:#ff00ab;') List
             |  your books and movies
-      .row(style='color:#ccc;text-align:center;background-color:#E4D363;')
+      .row(style='color:#ccc;text-align:center;background-color:#2F83B0;')
         .col-xs-12
           h4 
             span(style='color:#ff9900;') Share
             |  with friends and collegues
-      .row(style='color:#ccc;text-align:center;background-color:#E4D363;')
+      .row(style='color:#ccc;text-align:center;background-color:#2F83B0;')
         .col-xs-12
           h4 Or keep it 
             span(style='color:#00c9ff;') private
-      .row(style='color:gray;background-color:#E46863;')
+      .row(style='color:gray;background-color:#2F83B0;')
         .col-xs-12
           a(href='http://topandviews.com' id='stlink')
             h5(style='text-align:center;margin-top:30vh;') Top&Views Design
