--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -255,21 +255,21 @@ head
       .row( style='color:white;background-color:#2F83B0;')
         .col-xs-12(style='text-align:center;')
           h2(style='margin-top:7vh;') Tell me what you read, and I will tell you who you are.
-          h3(style='color:gray;margin-bottom:15vh;') François Mauriac
-      .row(style='color:#ccc;text-align:center;background-color:#2F83B0;')
+          h3(style='color:#054461;margin-bottom:15vh;') François Mauriac
+      .row(style='color:#ccc;text-align:center;background-color:#DFAA64;')
         .col-xs-12
           h4 
-            span(style='color:#ff00ab;') List
+            span(style='color:#013E59;') List
             |  your books and movies
-      .row(style='color:#ccc;text-align:center;background-color:#2F83B0;')
+      .row(style='color:#ccc;text-align:center;background-color:#DA835E;')
         .col-xs-12
           h4 
-            span(style='color:#ff9900;') Share
+            span(style='color:#013E59;') Share
             |  with friends and collegues
-      .row(style='color:#ccc;text-align:center;background-color:#2F83B0;')
+      .row(style='color:#ccc;text-align:center;background-color:#E05C5C;')
         .col-xs-12
           h4 Or keep it 
-            span(style='color:#00c9ff;') private
+            span(style='color:#013E59;') private
       .row(style='color:gray;background-color:#2F83B0;')
         .col-xs-12
           a(href='http://topandviews.com' id='stlink')
