--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -273,7 +273,7 @@ head
       .row(style='color:gray;background-color:#2F83B0;')
         .col-xs-12
           a(href='http://topandviews.com' id='stlink')
-            h5(style='text-align:center;margin-top:30vh;') Top&Views Design
+            h5(style='text-align:center;margin-top:30vh;margin-bottom:10vh;') Top&Views Design
           h5(style='text-align:center;') 2015 
     footer(class='footer')
       .container
