--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -248,7 +248,7 @@ head
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
-    .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;height:100%;padding-bottom:74px;')
+    .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;height:100%;padding-bottom:64px;')
       .row(style='background-color:#2F83B0;')
         .col-xs-12
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:7vh;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
@@ -273,8 +273,8 @@ head
       .row(style='color:gray;background-color:#2F83B0;')
         .col-xs-12
           a(href='http://topandviews.com' id='stlink')
-            h5(style='text-align:center;margin-top:30vh;margin-bottom:10vh;') Top&Views Design
-          h5(style='text-align:center;') 2015 
+            h5(style='text-align:center;margin-top:30vh;') Top&Views Design
+          h5(style='text-align:center;margin-bottom:10vh;') 2015 
     footer(class='footer')
       .container
         .row(style='text-align:center;')
