--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -277,7 +277,7 @@ head
           h5(style='text-align:center;margin-bottom:10vh;') 2015 
     footer(class='footer')
       .container
-        .row(style='text-align:center;')
+        .row(style='text-align:center;padding-top:10px;padding-bottom:10px;')
           .col-xs-3
             span(class='glyphicon glyphicon-home ' id='showLeft' style='color:white;font-size:30px;padding-top:13px;')
           .col-xs-3.col-xs-offset-6
@@ -294,6 +294,7 @@ head
             body = document.body;
         
         showLeft.onclick = function() {
+          console.log('click');
           switch(counter)
             {case(1):
                          counter=0;
