--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -279,7 +279,7 @@ head
       .container
         .row(style='text-align:center;padding-top:10px;padding-bottom:10px;')
           .col-xs-3
-            span(class='glyphicon glyphicon-home ' id='showLeft' style='color:white;font-size:30px;padding-top:13px;')
+            span(class='glyphicon glyphicon-home ' style='color:white;font-size:30px;padding-top:13px;')
           .col-xs-3.col-xs-offset-6
             span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;padding-top:13px;')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
