--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -275,13 +275,14 @@ head
           a(href='http://topandviews.com' id='stlink')
             h5(style='text-align:center;margin-top:30vh;') Top&Views Design
           h5(style='text-align:center;margin-bottom:10vh;') 2015 
-    footer(class='footer')
-      .container
-        .row(style='text-align:center;padding-top:10px;padding-bottom:10px;')
-          .col-xs-3
-            span(class='glyphicon glyphicon-home ' style='color:white;font-size:30px;padding-top:13px;')
-          .col-xs-3.col-xs-offset-6
-            span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;padding-top:13px;')
+    button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
+    //footer(class='footer')
+    //  .container
+    //    .row(style='text-align:center;padding-top:10px;padding-bottom:10px;')
+    //      .col-xs-3
+    //        span(class='glyphicon glyphicon-home ' style='color:white;font-size:30px;padding-top:13px;')
+    //      .col-xs-3.col-xs-offset-6
+    //        span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;padding-top:13px;')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
