--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -276,6 +276,7 @@ head
             h5(style='text-align:center;margin-top:30vh;') Top&Views Design
           h5(style='text-align:center;margin-bottom:10vh;') 2015 
     button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
+      span(class='glyphicon glyphicon-align-justify ')
     //footer(class='footer')
     //  .container
     //    .row(style='text-align:center;padding-top:10px;padding-bottom:10px;')
