--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -248,7 +248,7 @@ head
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
-    .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;height:100%;padding-bottom:64px;')
+    .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;height:100%;')
       .row(style='background-color:#2F83B0;')
         .col-xs-12
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:7vh;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
