--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -245,6 +245,8 @@ head
              span(class='input-group-btn')
                button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
                  span(class='glyphicon glyphicon-search') 
+      a(href='/') Мои списки
+      a(href='/people') Списки друзей
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
