--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -31,7 +31,7 @@ head
       body {
       min-width:768px;
       font-family:roboto-thin;
-      background-color:#DFAA64;
+      background-color:#2F83B0;;
       }
       .navbar-nav {
        float: right;
@@ -160,10 +160,10 @@ head
         background-color:#333;
       }
   body
-    script.
-      if(screen.width < 414){
-      window.location='http://m.peopleandbooks.com/about';
-      }
+    //script.
+    //  if(screen.width < 414){
+    //  window.location='http://m.peopleandbooks.com/about';
+    //  }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       a(href="/") Мои списки
       a(href="/people") Списки друзей
