--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -171,7 +171,7 @@ head
       a(href='/about') О проекте
       a(href="/logout") Выйти
       img(class="media-object img-circle" src="/images/pblogov4.png" style='position:absolute;opacity:0.2;left:88px;bottom:20px;width:64px;height:64px;' alt="...")
-    .container(style='padding-left:40px;')  
+    .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;height:100%;')  
       .row(style='color:#ccc;')
         .col-xs-12
           h1(style='font-family:roboto-light;') Settings
