--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -103,7 +103,7 @@ head
         padding: 1em;
       }
       .cbp-spmenu-left {
-        left: -240px;
+        left: -315px;
       }
       .cbp-spmenu-left.cbp-spmenu-open {
         left: 0px;
@@ -150,9 +150,6 @@ head
           outline:0px !important;
           -webkit-appearance:none;
       }
-      .cont {
-        margin-left:20px;
-      }
       a {
         color:white !important;
       }
@@ -176,7 +173,7 @@ head
         .col-xs-12
           h1(style='font-family:roboto-light;') Settings
             small #{mail}
-      .row.cont
+      .row
         .col-xs-12
           .btn-group(role="group" aria-label="...")
             button(type="button" id='private' onclick='pubchange(0)' class="btn btn-warning") Private
@@ -184,7 +181,7 @@ head
       .row(style='color:white;')
         .col-xs-12
           h3 Color themes:
-      .row.cont
+      .row
         .col-xs-12
         .checkbox
           label
@@ -210,7 +207,7 @@ head
       .row(style='color:white;')
         .col-xs-12
           h3 Share your page:
-      .row.cont
+      .row
         .col-xs-6
           .highlight
             pre
