--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -31,7 +31,7 @@ head
       body {
       min-width:768px;
       font-family:roboto-thin;
-      background-color:#2F83B0;;
+      background-color:#DA835E;
       }
       .navbar-nav {
        float: right;
@@ -171,8 +171,13 @@ head
     .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;height:100%;')  
       .row(style='color:#ccc;')
         .col-xs-12
-          h1(style='font-family:roboto-light;') Settings
-            small #{mail}
+          h1 Settings
+      .row(style='color:white;')
+        .col-xs-12
+          h3(style='color:#004C5E;') Your email:
+      .row
+        .col-xs-12
+          small #{mail}
       .row
         .col-xs-12
           .btn-group(role="group" aria-label="...")
@@ -180,33 +185,33 @@ head
             button(type="button" id='public' onclick='pubchange(1)' class="btn btn-warning") Public
       .row(style='color:white;')
         .col-xs-12
-          h3 Color themes:
+          h3(style='color:#004C5E;') Color themes:
       .row
         .col-xs-12
-        .checkbox
-          label
-            input(type="checkbox" id='first' ) 
-            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#52CA8F;')
-            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#FAB142;')
-        .checkbox
-          label
-            input(type="checkbox" id='second' ) 
-            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:rgb(213, 74, 95);')
-            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#00788E;')
-        .checkbox
-          label
-            input(type="checkbox" id='third' ) 
-            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#00657C;')
-            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:rgb(0, 182, 205);')
-        .checkbox
-          label
-            input(type="checkbox" id='fourth' ) 
-            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:white;')
-            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:gray;')
-        button(class='btn btn-default' id='changecolor' type='button') Change color
-      .row(style='color:white;')
+          .checkbox
+            label
+              input(type="checkbox" id='first' ) 
+              span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#52CA8F;')
+              span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#FAB142;')
+          .checkbox
+            label
+              input(type="checkbox" id='second' ) 
+              span(class='glyphicon glyphicon-stop' style='font-size:30px;color:rgb(213, 74, 95);')
+              span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#00788E;')
+          .checkbox
+            label
+              input(type="checkbox" id='third' ) 
+              span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#00657C;')
+              span(class='glyphicon glyphicon-stop' style='font-size:30px;color:rgb(0, 182, 205);')
+          .checkbox
+            label
+              input(type="checkbox" id='fourth' ) 
+              span(class='glyphicon glyphicon-stop' style='font-size:30px;color:white;')
+              span(class='glyphicon glyphicon-stop' style='font-size:30px;color:gray;')
+          button(class='btn btn-default' id='changecolor' type='button') Change color
+      .row
         .col-xs-12
-          h3 Share your page:
+          h3(style='color:#004C5E;') Share your page:
       .row
         .col-xs-6
           .highlight
